added way to submit requests

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         border: 1px solid #979797;
         box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.50);
       }
+      .surfooter{
+        padding:20px;
+      }
+      .surfooter a{
+        color: #eb1;
+        text-decoration: underline;
+      }
       .footer{
         padding:20px;
         background-color: #5b5653;
@@ -94,6 +101,7 @@
         <fieldset>
          <legend>Design</legend>
          <ul>
+            <li><a target='_blank' href='http://designgigsforgood.squarespace.com/'>Design Gigs For Good</a></li>
             <li><a target='_blank' href='http://www.behance.net/joblist'>Behance Jobs</a></li>
             <li><a target='_blank' href='http://designjobs.aiga.org'>AIGA design jobs</a></li>
             <li><a target='_blank' href='http://dribbble.com/jobs'>Dribbble Jobs</a></li>
@@ -136,8 +144,10 @@
           <li><a target='_blank' href='http://woo.io'>Woo</a></li>
           <li><a target='_blank' href='http://interviewcake.com'>Interview Cake</a></li>
         </ul>
-
       </div>
+    </div>
+    <div class="surfooter">
+      Have another resource you want to share? Please <a href="http://evanburchard.com/contact">let me know</a> or submit to the project on <a href="http://github.com/EvanBurchard/jobboardboard">GitHub</a>!
     </div>
     <div class="footer">
       With Love from <a href="http://evanburchard.com">Evan</a>, 2017
