--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
   </head>
   <body>
     <div class='header'>
-      <div>
+      <div style="background:url('pika.png'); background-repeat: no-repeat; background-position:center; background-size: 60px;">
         <h1>Job Board Board</h1>
-        <img src="naki-head.png" width='200px' alt="" />
       </div>
     </div>
     <div class='wrapper'>
@@ -95,6 +94,8 @@
             <li><a target='_blank' href='http://authenticjobs.com/'>Authentic Jobs</a></li>
             <li><a target='_blank' href='http://breakoutlist.com/'>Break out list</a></li>
             <li><a target='_blank' href='http://www.krop.com/'>Krop</a></li>
+            <li><a target='_blank' href='http://panda.jobs/'>Panda Jobs</a></li>
+            <li><a target='_blank' href='http://jobs.smashingmagazine.com/'>Smashing Jobs</a></li>
             <li><a target='_blank' href='http://functionaljobs.com/'>Functional Jobs</a></li>
           </ul>
         </fieldset>
@@ -105,6 +106,7 @@
             <li><a target='_blank' href='http://www.behance.net/joblist'>Behance Jobs</a></li>
             <li><a target='_blank' href='http://designjobs.aiga.org'>AIGA design jobs</a></li>
             <li><a target='_blank' href='http://dribbble.com/jobs'>Dribbble Jobs</a></li>
+            <li><a target='_blank' href='http://www.coroflot.com/design-jobs'>Coroflot</a></li>
           </ul>
         </fieldset>
       </div>
