added diversity list

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           <li><a target='_blank' href='http://www.hiretechladies.com/'>Tech Ladies</a></li>
           <li><a target='_blank' href='http://woo.io'>Woo</a></li>
           <li><a target='_blank' href='http://interviewcake.com'>Interview Cake</a></li>
+          <li><a target='_blank' href='http://diversitylist.co/'>Diversity List</a></li>
         </ul>
       </div>
     </div>
