--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <div class="surfooter">
-      Have a board that you'd like to be added? Please <a href="http://evanburchard.com/contact">let me know</a> or submit to the project on <a href="http://github.com/EvanBurchard/jobboardboard">GitHub</a>!
+      Brought to you by <a href='http://jobpika.com'>Pika</a>
     </div>
     <hr>
     <div class='wrapper'>
