added game jobs

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
               <div class='board-category-filter structure' data-toggle='Flexible'>Flexible Jobs</div>
               <div class='board-category-filter tech-areas' data-toggle='FOSS'>FOSS</div>
               <div class='board-category-filter technology' data-toggle='Functional'>Functional Programming</div>
+              <div class='board-category-filter tech-areas' data-toggle='Games'>Games</div>
               <div class='board-category-filter technology' data-toggle='Go'>Go</div>
               <div class='board-category-filter structure' data-toggle='Growth'>High Growth</div>
               <div class='board-category-filter structure' data-toggle='Internships'>Internships</div>
@@ -235,6 +236,20 @@
               <li data-tech-only="true" class="Functional" style="display:none">
                 <a target="_blank" href="https://functionaljobs.com/">Functional Jobs</a>
               </li>
+
+              <li data-tech-only="true" class="Games" style="display:none">
+                <a target="_blank" href="https://www.gamesjobsdirect.com/">GamesJobDirect</a>
+              </li>
+              <li data-tech-only="true" class="Games" style="display:none">
+                <a target="_blank" href="http://gamejobhunter.com/">GameJobHunter</a>
+              </li>
+              <li data-tech-only="true" class="Games" style="display:none">
+                <a target="_blank" href="http://www.gamesjobboard.com/">GamesJobBoard</a>
+              </li>
+              <li data-tech-only="true" class="Games" style="display:none">
+                <a target="_blank" href="http://jobs.gamasutra.com">Gamasutra Jobs</a>
+              </li>
+
               <li data-tech-only="true" class="Go" style="display:none">
                 <a target="_blank" href="http://www.golangprojects.com/">Golang</a>
               </li>
