--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
 
     <div class="surfooter">
       Brought to you by <a href='http://jobpika.com'>Pika</a>
+
+
+
     </div>
+
+
     <hr>
     <div class='wrapper'>
       <div>
@@ -171,7 +176,7 @@
               <div class='board-category-filter diversity' data-toggle='URM'>URM</div>
               <div class='board-category-filter diversity' data-toggle='Women'>Women</div>
               <div class='board-category-filter technology' data-toggle='Wordpress'>Wordpress</div>
-              <hr>
+              <br>
               <div class='board-category-filter technology' data-toggle='Tech'>General Tech Industry</div>
               <div class='board-category-filter technology' data-toggle='General'>Not Tech Specific</div>
             </div>
@@ -235,6 +240,9 @@
               </li>
               <li data-tech-only="true" class="Functional" style="display:none">
                 <a target="_blank" href="https://functionaljobs.com/">Functional Jobs</a>
+              </li>
+              <li data-tech-only="true" class="Games" style="display:none">
+                <a target="_blank" href="https://www.artstation.com/jobs">GamesJobDirect</a>
               </li>
 
               <li data-tech-only="true" class="Games" style="display:none">
@@ -425,6 +433,31 @@
           </div>
         </div>
       </div>
+
+      <hr>
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+      <form action="https://techboss.us8.list-manage.com/subscribe/post?u=4e77c50c337b03b990cae0c85&amp;id=0ff8d64beb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <h2>Get Jobs in Your Mailbox Weekly</h2>
+          <div class="mc-field-group">
+            <label for="mce-EMAIL">Email Address</label>
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          </div>
+          <div class="mc-field-group">
+            <label for="mce-FNAME">First Name </label>
+            <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+          </div>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4e77c50c337b03b990cae0c85_0ff8d64beb" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+      </form>
+      </div>
+      <!--End mc_embed_signup-->
     </div>
   </body>
 </html>
