--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <a target="_blank" href="https://functionaljobs.com/">Functional Jobs</a>
               </li>
               <li data-tech-only="true" class="Games" style="display:none">
-                <a target="_blank" href="https://www.artstation.com/jobs">GamesJobDirect</a>
+                <a target="_blank" href="https://www.artstation.com/jobs">ArtStation</a>
               </li>
 
               <li data-tech-only="true" class="Games" style="display:none">
