--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         margin: 18px;
       }
 
-
       .board-tech-filter{
         padding-left: 10px;
       }
@@ -116,6 +115,66 @@
       .board-category-filter.structure.clicked{
         background-color: lightblue;
       }
+
+
+
+
+
+      #mc_embed_signup{
+        border: #e7eef2 1px solid;
+        padding: 3rem;
+        margin-top: 3rem;
+        text-align: center;
+        background: #f5f8fa;
+        border-radius: 5px;
+      }
+      #mc_embed_signup .title {
+        font-size:1.4em;
+      }
+
+      .mc-field-group input{
+        display: inline;
+
+      }
+      #mc_embed_signup input{ 
+        width: 260px;
+        padding: 6px 9px;
+        margin: 0 0 5px 0;
+        outline: 0;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.0rem;
+        font-weight: 100;
+        line-height: 1.4em;
+        background: #fff;
+        border: #e7eef2 1px solid;
+        border-radius: 4px;
+        box-shadow: none;
+        -webkit-appearance: none;
+      }
+
+      #mc_embed_signup .button{
+        min-height: 35px;
+        width: auto;
+        display: inline-block;
+        padding: 0.1rem 1.5rem;
+        cursor: pointer;
+        outline: none;
+        text-decoration: none;
+        color: #fff;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 11px;
+        line-height: 13px;
+        font-weight: 300;
+        text-align: center;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        text-shadow: none;
+        border-radius: 0.3rem;
+        border: rgba(0,0,0,0.05) 0.1em solid;
+        background: #5ba4e5;
+      }
+
+
 
     </style>
 
@@ -438,6 +497,26 @@
           </div>
         </div>
       </div>
+
+      <!-- Begin MailChimp Signup Form -->
+      <div id="mc_embed_signup">
+        <form action="https://jobpika.us8.list-manage.com/subscribe/post?u=4e77c50c337b03b990cae0c85&amp;id=0ff8d64beb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <h3 class='title'>Subscribe for Weekly Jobs!</h3>
+          <p>Get new job listings right to your inbox.</p>
+          <div   style="display: inline;" class="mc-field-group">
+            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email address">
+          </div>
+          <div id="mce-responses" style="display: inline;" >
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="display: inline; position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4e77c50c337b03b990cae0c85_0ff8d64beb" tabindex="-1" value=""></div>
+          <input  style="display: inline;" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+        </div>
+      </form>
+      </div>
+      <!--End mc_embed_signup-->
 
     </div>
   </body>
