--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
       }
       #mc_embed_signup input{ 
-        width: 260px;
+        max-width: 100%;
         padding: 6px 9px;
-        margin: 0 0 5px 0;
+        margin: 0 0 0 0;
         outline: 0;
         font-family: 'Open Sans', sans-serif;
         font-size: 1.0rem;
@@ -504,7 +504,7 @@
         <div id="mc_embed_signup_scroll">
           <h3 class='title'>Subscribe for Weekly Jobs!</h3>
           <p>Get new job listings right to your inbox.</p>
-          <div   style="display: inline;" class="mc-field-group">
+          <div  style="display: inline;" class="mc-field-group">
             <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email address">
           </div>
           <div id="mce-responses" style="display: inline;" >
