--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
               <div class='board-category-filter technology' data-toggle='Mac'>Mac</div>
               <div class='board-category-filter technology' data-toggle='Meteor'>Meteor</div>
               <div class='board-category-filter technology' data-toggle='MR'>MR/VR/AR</div>
-              <div class='board-category-filter structure' data-toggle='Nonprofits'>Nonprofits</div>
               <div class='board-category-filter technology' data-toggle='Perl'>Perl</div>
               <div class='board-category-filter technology' data-toggle='Postgres'>Postgres</div>
               <div class='board-category-filter technology' data-toggle='Python'>Python</div>
@@ -237,6 +236,7 @@
               <div class='board-category-filter location' data-toggle='Remote'>Remote</div>
               <div class='board-category-filter technology' data-toggle='Ruby'>Ruby</div>
               <div class='board-category-filter technology' data-toggle='Scala'>Scala</div>
+              <div class='board-category-filter structure' data-toggle='Impact'>Social Impact</div>
               <div class='board-category-filter diversity' data-toggle='URM'>URM</div>
               <div class='board-category-filter diversity' data-toggle='Women'>Women</div>
               <div class='board-category-filter technology' data-toggle='Wordpress'>Wordpress</div>
@@ -412,6 +412,14 @@
               <li data-tech-only="true" class="URM" style="display:none">
                 <a target="_blank" href="https://www.pocitjobs.com/">People of Color in Tech</a>
               </li>
+
+              <li data-tech-only="true" class="Impact" style="display:none">
+                <a target="_blank" href="https://jobs.codeforamerica.org/">Code For America</a>
+              </li>
+              <li data-tech-only="true" class="Impact" style="display:none">
+                <a target="_blank" href="https://www.idealist.org/">Idealist</a>
+              </li>
+
               <li data-tech-only="true" class="Women" style="display:none">
                 <a target="_blank" href="https://angel.co/job-collections/female-founders">AngelList Female Founder</a>
               </li>
@@ -463,10 +471,7 @@
               <li data-tech-only="false" class="General" style="display:none">
                 <a target="_blank" href="http://careerbuilder.com/">Career Builder</a>
               </li>
-              <li data-tech-only="false" class="Nonprofits" style="display:none">
-                <a target="_blank" href="https://www.idealist.org/">Idealist</a>
-              </li>
-              <li data-tech-only="false" class="Nonprofits" style="display:none">
+              <li data-tech-only="false" class="Impact" style="display:none">
                 <a target="_blank" href="https://www.nten.org/jobs/">NTEN</a>
               </li>
               <li data-tech-only="false" class="URM" style="display:none">
