--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <div class='board-category-filter location' data-toggle='Remote'>Remote</div>
               <div class='board-category-filter technology' data-toggle='Ruby'>Ruby</div>
               <div class='board-category-filter technology' data-toggle='Scala'>Scala</div>
-              <div class='board-category-filter structure' data-toggle='Impact'>Social Impact</div>
+              <div class='board-category-filter structure' data-toggle='Impact'>Democracy/Social Impact</div>
               <div class='board-category-filter diversity' data-toggle='URM'>URM</div>
               <div class='board-category-filter diversity' data-toggle='Women'>Women</div>
               <div class='board-category-filter technology' data-toggle='Wordpress'>Wordpress</div>
@@ -411,6 +411,9 @@
               </li>
               <li data-tech-only="true" class="URM" style="display:none">
                 <a target="_blank" href="https://www.pocitjobs.com/">People of Color in Tech</a>
+              </li>
+              <li data-tech-only="true" class="Impact" style="display:none">
+                <a target="_blank" href="https://www.democraticjobs.coop">Democratic Jobs</a>
               </li>
 
               <li data-tech-only="true" class="Impact" style="display:none">
