--- a/index.html
+++ b/index.html
@@ -415,6 +415,9 @@
               <li data-tech-only="true" class="Impact" style="display:none">
                 <a target="_blank" href="https://www.democraticjobs.coop">Democratic Jobs</a>
               </li>
+              <li data-tech-only="true" class="Impact" style="display:none">
+                <a target="_blank" href="https://www.highergroundlabs.com/jobs">Higher Ground Labs</a>
+              </li>
 
               <li data-tech-only="true" class="Impact" style="display:none">
                 <a target="_blank" href="https://jobs.codeforamerica.org/">Code For America</a>
